ChatHandler refactor, new BazaarOrderEvent (not fully implemented yet)